# cpp_oop_inheritance-polymorphism

.github/workflows/: cmake-single-platform.yml
docs/source/: conf.py  index.rst
include/: expression.h
src/: CMakeLists.txt  code.cpp  expression.cpp
tests/: CMakeLists.txt  test_expression.cpp
